--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "framer-motion": "^12.9.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
-    "next": "15.5.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "15.4.10",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   },
@@ -39,7 +39,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.9",
+    "eslint-config-next": "15.4.10",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.5.3",
